feat: two-factor authentication added!
feat: 2fa has been implemented across several files, notably authentication.py and connect.py the most

as such auth.html has been created and login.html routes users to auth

whether or not it works is still up for debate but i am hopeful

--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -7,6 +7,8 @@
 	<form action="" method="post">
 		<label for="user2">Username:</label><br>
 		<input type="text" id="user2" name="user2"><br>
+		<label for="email">Email Address:</label><br>
+		<input type="text" id="email" name="email"><br>
 		<label for="pwnew">Password:</label><br>
 		<input type="password" id="pwnew" name="pwnew"><br>
 		<label for="pw2">Re-enter Password:</label><br>
