fix: a lot of things got fixed with 2fa as it now works
fix: routing works properly now instead of just showing a new template on the same route

fix: emails get sent, previously was handled by authentication.py but is instead handled by sender.py

fix: fixes with connect.py included several syntax errors in new auth functions

feat: new user route

feat: (from previous commit, unmentioned) new auth route

--- a/templates/auth.html
+++ b/templates/auth.html
@@ -6,9 +6,9 @@
 <body>
 	<form action="" method="post">
 		<label for="user">Username: </label><br>
-		<p style="color: green;"> {{ user }} </p>
+		<p id="user" name="user" style="color: green;"> {{ user }} </p>
 		<label for="auth">6-Character Authentication Code: </label><br>
-		<input type="password" id="auth" name="auth"><br>
+		<input type="text" id="auth" name="auth" maxlength="6"><br>
 		<input type="submit" value="Submit" formmethod="post"><br>
 	</form>
 	{% if error %}
