--- a/templates/login.html
+++ b/templates/login.html
@@ -6,9 +6,9 @@
 <body>
 	<form action="" method="post">
 		<label for="user">Username:</label><br>
-		<input type="text" id="user" name="user"><br>
+		<input type="text" id="user" name="user" maxlength="16"><br>
 		<label for="pw">Password:</label><br>
-		<input type="password" id="pw" name="pw"><br>
+		<input type="password" id="pw" name="pw" maxlength="16"><br>
 		<input type="submit" value="Submit" formmethod="post"><br>
 	</form>
 	<form action="/sign-up" method="post">
